--- a/.github/workflows/entrypoint.yml
+++ b/.github/workflows/entrypoint.yml
@@ -19,3 +19,5 @@ jobs:
             echo "Branch name does not match criteria. Exiting."
             exit 1
           fi
+      - name: Continue
+        run: echo "uso"
