--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -1,4 +1,4 @@
-name: Entrypoint workflow
+name: Deploy infra
 
 on:
   workflow_dispatch:
@@ -6,7 +6,7 @@ on:
       branch:
         required: true
 jobs:
-  check-branch-name:
+  deploy_infra:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
