--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
       branch:
         required: true
 jobs:
-  check-branch-name:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
