--- a/.github/workflows/entrypoint.yml
+++ b/.github/workflows/entrypoint.yml
@@ -2,8 +2,7 @@ name: Entrypoint workflow
 
 on:
   pull_request:
-    types:
-      - opened
+    types: [assigned, opened, synchronize, reopened]
     branches:
       - main
 jobs:
