--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -1,27 +1,26 @@
-name: Deploy infra
+name: Provision Infrastructure
 
 on:
-  workflow_dispatch:
+  workflow_call: # Triggered by Workflow 1
     inputs:
-      branch:
+      branch_name:
+        type: string
+        description: "Feature Branch Name"
         required: true
 jobs:
-  deploy_infra:
+  provision-infrastructure:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout
-        uses: actions/checkout@v4
+      - name: Check out code
+        uses: actions/checkout@v2
 
-      - name: Deploy infra
+      - name: Provision infrastructure
         run: |
-          echo ${{ github.event.inputs.branch }}
-          echo "pulumi up and stuff like that"
-          echo "if success continue on the next step"
+          echo "Provisioning infrastructure for branch ${{ inputs.branch_name }}..."
+          # Your provisioning script/commands go here
 
-      - name: Trigger deploy apps workflow
-        uses: benc-uk/workflow-dispatch@v1
+      - name: Trigger Workflow 3 with branch name as input
+        if: success()
+        uses: ./.github/workflows/deploy-apps.yml # Call Workflow 3
         with:
-          workflow: "deploy-apps.yml"
-          ref: main
-          token: ${{ secrets.PAT }}
-          inputs: '{"branch": "${{ github.head_ref }}"}'
+          branch_name: ${{ inputs.branch_name }} # Pass the feature branch name to Workflow 3
