--- a/.github/workflows/deploy-apps.yml
+++ b/.github/workflows/deploy-apps.yml
@@ -5,18 +5,21 @@ on:
     inputs:
       branch_name:
         required: true
+      pr_opened:
+        type: boolean
+        required: true
   push:
     branches:
       - "feat/*"
       - "feature/*"
-  pull_request:
-    types: [opened, synchronize, reopened]
-    branches:
-      - main
 jobs:
   deploy_apps:
     runs-on: ubuntu-latest
     steps:
+      - name: Check if PR opened
+        if: inputs.pr_opened == false
+        run: exit 1
+
       - name: checkout
         uses: actions/checkout@v4
         with:
