--- a/.github/workflows/entrypoint.yml
+++ b/.github/workflows/entrypoint.yml
@@ -21,8 +21,8 @@ jobs:
 
       - name: checkout
         uses: actions/checkout@v4
-
-      - name: Trigger Workflow 2 with branch name as input
-        uses: dzanan-cukurija/test-flow/.github/workflows/deploy-infra.yml@main # Call the workflow directly here
-        with:
-          branch_name: ${{ github.head_ref }} # Pass feature branch name as input
+  trigger_deploy:
+    needs: check-branch-name
+    uses: dzanan-cukurija/test-flow/.github/workflows/deploy-infra.yml@main # Call the workflow directly here
+    with:
+      branch_name: ${{ github.head_ref }}
