--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -7,6 +7,11 @@ on:
         type: string
         description: "Feature Branch Name"
         required: true
+
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   provision-infrastructure:
     runs-on: ubuntu-latest
