--- a/.github/workflows/entrypoint.yml
+++ b/.github/workflows/entrypoint.yml
@@ -18,8 +18,10 @@ jobs:
             echo "Branch name doesn't contain 'feat' or 'feature', skipping workflow.";
             exit 0;
           fi
+
   trigger_deploy:
     needs: check-branch-name
-    uses: dzanan-cukurija/test-flow/.github/workflows/deploy-infra.yml@main
+    steps:
+
     with:
       branch_name: ${{ github.head_ref }}
