--- a/.github/workflows/entrypoint.yml
+++ b/.github/workflows/entrypoint.yml
@@ -18,10 +18,12 @@ jobs:
             echo "Branch name doesn't contain 'feat' or 'feature', skipping workflow.";
             exit 0;
           fi
-
-  trigger_deploy:
+  trigger-infra-deploy:
+    runs-on: ubuntu-latest
     needs: check-branch-name
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    with:
-      branch_name: ${{ github.head_ref }}
+      - name: Trigger deploy infra
+        run: ./trigger-workflow.sh "deploy-infra.yml" "${{ github.head_ref }}"
