--- a/.github/workflows/entrypoint.yml
+++ b/.github/workflows/entrypoint.yml
@@ -26,4 +26,4 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Trigger deploy infra
-        run: ./trigger-workflow.sh "deploy-infra.yml" "${{ github.head_ref }}"
+        run: ./trigger-workflow.sh "deploy-infra.yml" "${{ github.head_ref }}" "${{ secrets.PAT }}"
