--- a/.github/workflows/temp.yml
+++ b/.github/workflows/temp.yml
@@ -5,6 +5,10 @@ on:
     types: [opened, synchronize, reopened]
     branches:
       - main # Or whatever the target branch is
+
+env:
+  DEPLOY: false
+  BRANCH_NAME: ${{ github.head_ref }}
 jobs:
   check-branch-name:
     runs-on: ubuntu-latest
@@ -16,6 +20,7 @@ jobs:
             echo "Branch name doesn't contain 'feat' or 'feature', skipping workflow.";
             exit 0;
           fi
+
   deploy-infra:
     runs-on: ubuntu-latest
     needs: check-branch-name
@@ -30,9 +35,12 @@ jobs:
         run: echo "configure aws"
       - name: Pulumi up
         run: echo "pulumi up -f"
+      - name: Done
+        run: ${{ github.env.DEPLOY }}=true
+
   deploy-apps:
     runs-on: ubuntu-latest
-    needs: deploy-infra
+    if: ${{ github.env.DEPLOY }}
     steps:
       - name: AWS configure
         run: echo "configure aws"
@@ -54,6 +62,7 @@ jobs:
     steps:
       - name: Check reviews
         run: echo "if 2 reviews pass else fail"
+
   destroy-infra:
     runs-on: ubuntu-latest
     needs: check-reviews
