--- a/.github/workflows/temp.yml
+++ b/.github/workflows/temp.yml
@@ -85,7 +85,7 @@ jobs:
 
   destroy-infra:
     runs-on: ubuntu-latest
-    needs: check-reviews
+    if: failure()
     steps:
       - name: pulumi login
         id: pulumi-login
